--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <title>{{ page.title | default: site.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <!-- Navigation items here -->
-            <a href="{{ '/' | relative_url }}">Home</a>
-        </nav>
-    </header>
-    <main>
+    <div class="container">
         {{ content }}
-    </main>
+    </div>
     <footer>
         <p>© {{ site.time | date: '%Y' }} - {{ site.author }}</p>
     </footer>
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </body>
 </html>
