--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title | default: site.title }}</title>
-    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/custom.css' | relative_url }}">
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
