--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -1,3 +1,6 @@
+---
+---
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -32,9 +35,4 @@ footer {
         margin: 0; 
         text-shadow: 0 0 8px rgba(0, 0, 0, 0.6); 
     }
-}
-
-h1, h2, h3 {
-    font-family: 'Merriweather', serif;
-    color: #0077cc; /* Example primary color */
 }
