--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -23,7 +23,7 @@ footer {
 }
 
 .story-header {
-    background: url('images/bober.png') no-repeat center center;
+    background: url('images/background.png') no-repeat center center;
     background-size: cover;
     height: 300px; 
     display: flex;
