--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -2,10 +2,10 @@
 ---
 
 body {
-    font-family: 'Roboto', sans-serif; // Using Roboto font
+    font-family: 'Monospace', sans-serif; // Using Roboto font
     margin: 0;
     padding: 0;
-    background: #f4f4f4; // Uniform background color
+    background: #fff; // Uniform background color
     color: #333;
 }
 
