--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -13,7 +13,7 @@ body {
     padding: 2em;
     margin: 2em auto;
     max-width: 800px;
-    background: transparent; // Making the container background transparent
+    background: #fff; // Making the container background transparent
 }
 
 footer {
