--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -7,6 +7,8 @@ body {
     padding: 0;
     background: #fff; // Uniform background color
     color: #333;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .container {
