--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -9,6 +9,8 @@ body {
     color: #333;
     text-align: justify;
     text-justify: inter-word;
+    line-height: 2px;
+    font-size: 15px;
 }
 
 .container {
