--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -9,8 +9,8 @@ body {
     color: #333;
     text-align: justify;
     text-justify: inter-word;
-    line-height: 2px;
-    font-size: 15px;
+    line-height: 1.5625cm;
+    font-size: 20px;
 }
 
 .container {
