--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -2,15 +2,15 @@
 ---
 
 body {
-    font-family: 'Monospace', sans-serif; // Using Roboto font
+    font-family: 'Roboto', sans-serif; // Using Roboto font
     margin: 0;
     padding: 0;
     background: #fff; // Uniform background color
     color: #333;
     text-align: justify;
     text-justify: inter-word;
-    line-height: 0.8cm;
-    font-size: 16px;
+    line-height: 0.7cm;
+    font-size: 17px;
 }
 
 .container {
