--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -2,7 +2,7 @@
 ---
 
 body {
-    font-family: 'Roboto', sans-serif; // Using Roboto font
+    font-family: 'Lora', sans-serif; // Using Roboto font
     margin: 0;
     padding: 0;
     background: #fff; // Uniform background color
@@ -10,7 +10,7 @@ body {
     text-align: justify;
     text-justify: inter-word;
     line-height: 0.7cm;
-    font-size: 17px;
+    font-size: 18px;
 }
 
 .container {
