--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -2,7 +2,7 @@
 ---
 
 body {
-    font-family: 'Inconsolata', sans-serif; // Using Roboto font
+    font-family: 'Lora', sans-serif; // Using Roboto font
     margin: 0;
     padding: 0;
     background: #fff; // Uniform background color
