--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="{{ '/assets/custom.css' | relative_url }}">
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 </head>
 <body>
     <div class="container">
