--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -76,7 +76,7 @@ tr:hover {background-color: #ddd;} /* Hover effect for rows */
     position: absolute;
     width: 50px; /* Adjust size as needed */
     height: 20px; /* Adjust size as needed */
-    background-image: url('path-to-dollar-image.png'); /* Path to your dollar bill image */
+    background-image: url('https://github.com/epfl-ada/ada-2023-project-fivefrenchspeakingpeoplenocap/blob/page/docs/assets/images/dollars.png'); /* Path to your dollar bill image */
     background-size: cover;
     animation: fall linear infinite;
 }
