--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -77,7 +77,7 @@ tr:hover {background-color: #ddd;} /* Hover effect for rows */
     width: 50px; /* Adjust size as needed */
     height: 20px; /* Adjust size as needed */
     
-    background-image: url('images/dollars.png'); /* Path to your dollar bill image */
+    background-image: url('images/dolar.png'); /* Path to your dollar bill image */
     background-size: cover;
     animation: fall linear infinite;
 }
