--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,9 +13,7 @@
 </head>
 <body>
 
-    <div class="container">
-         <div id="fallingDollars"></div>
-
+    <div class="container", id="fallingDollars">
         {{ content }}
     </div>
     <footer>
