--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,8 +12,9 @@
 
 </head>
 <body>
+    <div id="fallingDollars"></div> <!-- Falling dollars background -->
 
-    <div class="container", id="fallingDollars">
+    <div class="container">
         {{ content }}
     </div>
     <footer>
