--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -51,20 +51,20 @@ tr:nth-child(even) {background-color: #f9f9f9;}
 tr:hover {background-color: #ddd;} 
 
 .story-header {
-    background: url('images/background.png') no-repeat center center;
+    background: url('images/background.png') no-repeat center center fixed; 
     background-size: cover;
-    height: 300px; 
+    height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    width: 100vw; 
 
     h1 {
         margin: 0; 
         text-shadow: 0 0 8px rgba(0, 0, 0, 0.6); 
     }
 }
-
 #fallingDollars {
     position: fixed;
     top: 0;
