--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -51,14 +51,13 @@ tr:nth-child(even) {background-color: #f9f9f9;}
 tr:hover {background-color: #ddd;} 
 
 .story-header {
-    background: url('images/background.png') no-repeat center center fixed; 
+    background: url('images/background.png') no-repeat center center;
     background-size: cover;
-    height: 100vh; 
+    height: 300px; 
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    width: 100vw; 
 
     h1 {
         margin: 0; 
