--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -29,7 +29,7 @@ footer {
 }
 
 table {
-  width: 80%; 
+  width: 800%; 
   margin: auto; 
   border-collapse: collapse; 
   font-family: Arial, sans-serif;
@@ -39,6 +39,7 @@ th, td {
   border: 1px solid #ddd; 
   padding: 8px;
   text-align: left; 
+  font-size: 18px
 }
 
 th {
