--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -150,7 +150,7 @@ blockquote {
   quotes: "\\201C""\\201D""\\2018""\\2019";
 }
 
-#tablebutton {
+.tablebutton {
       margin-top: 20px;
       padding: 10px 20px;
       font-size: 16px;
@@ -162,6 +162,6 @@ blockquote {
       transition: background-color 0.3s;
     }
 
-#tablebutton:hover {
+.tablebutton:hover {
       background-color: #45a049;
     }
