--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -64,9 +64,13 @@ tr:hover {background-color: #ddd;}
     justify-content: center;
     align-items: center;
     color: white;
-    margin-left: -250px;
-    margin-right: -250px;
-
+    width: 100vw;
+    position: relative; 
+    left: 50%;         
+    transform: translateX(-50%); 
+    margin-left: calc(-50vw + 50%); 
+    margin-right: calc(-50vw + 50%);
+}
     h1 {
         margin: 0; 
         text-shadow: 0 0 8px rgba(0, 0, 0, 0.6); 
@@ -111,7 +115,6 @@ tr:hover {background-color: #ddd;}
   background-color: #f9f9f9;
 }
 
-/* Label styling */
 #inputForm label {
   display: block;
   margin-bottom: 10px;
@@ -119,17 +122,15 @@ tr:hover {background-color: #ddd;}
   color: #333;
 }
 
-/* Text input styling */
 #inputForm input[type="text"] {
   width: 100%;
   padding: 8px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box; /* Ensures padding doesn't affect overall width */
+  box-sizing: border-box;
 }
 
-/* Button styling */
 #inputForm button {
   background-color: #4CAF50;
   color: white;
@@ -144,7 +145,6 @@ tr:hover {background-color: #ddd;}
   background-color: #45a049;
 }
 
-/* Result paragraph styling */
 #result {
   margin-top: 20px;
   font-size: 18px;
@@ -176,23 +176,22 @@ blockquote {
 
 
 #querySelect {
-        font-size: 16px;         /* Change font size */
-        color: #333;            /* Text color */
-        background-color: #fff; /* Background color */
-        border: 1px solid #ddd; /* Border color and width */
-        padding: 5px 10px;      /* Padding inside the dropdown */
-        border-radius: 5px;     /* Rounded corners */
-        cursor: pointer;        /* Cursor type */
-        outline: none;          /* Outline style */
+        font-size: 16px;         
+        color: #333;            
+        background-color: #fff; 
+        border: 1px solid #ddd; 
+        padding: 5px 10px;      
+        border-radius: 5px;    
+        cursor: pointer;        
+        outline: none;         
     }
 
-    /* Style for the options */
+
     #querySelect option {
-        padding: 5px;          /* Padding for options */
-        background-color: #f9f9f9; /* Background color for options */
+        padding: 5px;          
+        background-color: #f9f9f9; 
     }
 
-    /* Hover effect for options */
     #querySelect option:hover {
         background-color: #eaeaea;
     }
