--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -86,15 +86,23 @@ tr:hover {background-color: #ddd;}
     z-index: -1; 
 }
 
+@keyframes rotateDollar {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
 
 .dollar {
     width: 100px; 
     height: 40px;  
     background-size: cover;
-    position: flex;
+    position: absolute;
     background-image: url('images/dolar.png'); 
     background-size: cover;
-    animation: fall linear infinite;
+    animation: fall linear infinite, rotateDollar;
 }
 
 @keyframes fall {
