--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div id="fallingDollars"></div> <!-- Falling dollars background -->
-
+    <div class="story-header">
+        <h1>Money Mov(i)es</h1>
+    </div>
     <div class="container">
         {{ content }}
     </div>
