--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -37,7 +37,7 @@ table {
   width: 80%; 
   margin: auto; 
   border-collapse: collapse; 
-  font-family: Arial, sans-serif;
+  font-family: 'Lora', sans-serif; 
 }
 
 th, td {
