--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -185,3 +185,8 @@ blockquote {
     #querySelect option:hover {
         background-color: #eaeaea;
     }
+
+.tenor-gif-embed {
+    margin: 0 auto;
+    max-width: 100%;
+}
