--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -149,7 +149,6 @@ blockquote {
 }
 
 .tablebutton {
-      margin-top: 20px;
       padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
@@ -158,6 +157,8 @@ blockquote {
       border: none;
       border-radius: 5px;
       transition: background-color 0.3s;
+      margin: 0 auto;
+      max-width: 100%;
     }
 
 .tablebutton:hover {
