--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -159,6 +159,7 @@ blockquote {
       transition: background-color 0.3s;
       margin: 0 auto;
       max-width: 100%;
+      display: block;
     }
 
 .tablebutton:hover {
