add final data story page

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ page.title | default: site.title }}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/custom.css' | relative_url }}">
+    <script src="https://github.com/epfl-ada/ada-2023-project-fivefrenchspeakingpeoplenocap/blob/page/docs/assets/js/main.js"></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 </head>
 <body>
+    <div id="fallingDollars"></div> <!-- Falling dollars background -->
+    <div class="story-header">
+        <h1>Money Mov(i)es</h1>
+    </div>
     <div class="container">
         {{ content }}
     </div>
