--- a/docs/assets/custom.scss
+++ b/docs/assets/custom.scss
@@ -68,6 +68,7 @@ tr:hover {background-color: #ddd;}
     h1 {
         margin: 0; 
         text-shadow: 0 0 8px rgba(0, 0, 0, 0.6); 
+        font-size: 24px;
     }
 
 #fallingDollars {
